external-crates/move/crates/move-compiler/tests/development/typing/signed_int_zero_literal.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_zero_literal.move:6:30
  │
6 │     fun zero_i8() { let _x = 0i8; }
  │                              ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_zero_literal.move:7:31
  │
7 │     fun zero_i16() { let _x = 0i16; }
  │                               ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_zero_literal.move:8:31
  │
8 │     fun zero_i32() { let _x = 0i32; }
  │                               ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_zero_literal.move:9:31
  │
9 │     fun zero_i64() { let _x = 0i64; }
  │                               ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:10:32
   │
10 │     fun zero_i128() { let _x = 0i128; }
   │                                ^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:13:34
   │
13 │     fun neg_zero_i8() { let _x = -(0i8); }
   │                                  ^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:13:36
   │
13 │     fun neg_zero_i8() { let _x = -(0i8); }
   │                                    ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:14:35
   │
14 │     fun neg_zero_i64() { let _x = -(0i64); }
   │                                   ^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:14:37
   │
14 │     fun neg_zero_i64() { let _x = -(0i64); }
   │                                     ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:17:38
   │
17 │     fun inferred_zero_i8() { let _x: i8 = 0; }
   │                                      ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:17:43
   │
17 │     fun inferred_zero_i8() { let _x: i8 = 0; }
   │                                           ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:18:39
   │
18 │     fun inferred_zero_i64() { let _x: i64 = 0; }
   │                                       ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:18:45
   │
18 │     fun inferred_zero_i64() { let _x: i64 = 0; }
   │                                             ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:19:40
   │
19 │     fun inferred_zero_i128() { let _x: i128 = 0; }
   │                                        ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:19:47
   │
19 │     fun inferred_zero_i128() { let _x: i128 = 0; }
   │                                               ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:23:17
   │
23 │         let x = 5i64;
   │                 ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:24:18
   │
24 │         let _y = x + 0i64;
   │                  ^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:24:22
   │
24 │         let _y = x + 0i64;
   │                      ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:28:17
   │
28 │         let x = 5i32;
   │                 ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:29:18
   │
29 │         let _y = x - 0i32;
   │                  ^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:29:22
   │
29 │         let _y = x - 0i32;
   │                      ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:33:17
   │
33 │         let x = 5i16;
   │                 ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:34:18
   │
34 │         let _y = x * 0i16;
   │                  ^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_zero_literal.move:34:22
   │
34 │         let _y = x * 0i16;
   │                      ^^^^ Signed integer types are under development
